[gd_scene load_steps=8 format=2]

[ext_resource path="res://Tower.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 0.92476
height = 1.45419

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="CylinderMesh" id=3]
height = 8.0

[sub_resource type="SphereShape" id=5]
radius = 10.0

[sub_resource type="BoxShape" id=6]

[sub_resource type="CubeMesh" id=7]
size = Vector3( 25, 1, 25 )

[node name="Tower" type="KinematicBody"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 1.36041, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.13312, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )

[node name="GunBarrel" type="MeshInstance" parent="."]
transform = Transform( 0.25, 0, 0, 0, -1.09278e-08, 0.25, 0, -0.25, -1.09278e-08, -1.85259e-07, 0.576581, -0.987071 )
mesh = SubResource( 3 )

[node name="RayCast" type="RayCast" parent="GunBarrel"]

[node name="TowerRange" type="Area" parent="."]

[node name="CollisionShape2" type="CollisionShape" parent="TowerRange"]
shape = SubResource( 5 )

[node name="Area" type="Area" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 7, 0, 0, 0, 1, 0, 0, 0, 7, 0, 0, 0 )
shape = SubResource( 6 )
__meta__ = {
"_editor_description_": "	"
}

[node name="MeshInstance" type="MeshInstance" parent="Area"]
visible = false
mesh = SubResource( 7 )

[connection signal="body_entered" from="TowerRange" to="." method="_on_TowerRange_body_entered"]
[connection signal="body_exited" from="TowerRange" to="." method="_on_TowerRange_body_exited"]
[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_Area_area_exited"]
